--- a/.air.toml
+++ b/.air.toml
@@ -6,20 +6,23 @@ tmp_dir = "bin"
 
 [build]
   args_bin = []
-  bin = "bin\\main.exe"
-  cmd = "go build -C cmd/server -o ./bin/main.exe ."
+  cmd = "go build -gcflags=\"all=-N -l\" -o ./bin/main ./cmd/server"
   delay = 1000
-  entrypoint = ["bin\\main.exe"]
-  exclude_dir = ["assets", "tmp", "vendor", "testdata",".idea",".git",".output.txt"]
+  env = ["CGO_ENABLED=0"]
+  # Use PATH-resolved tools like dlv by omitting path separators.
+  entrypoint = [
+    "dlv", "exec", "--accept-multiclient", "--log", "--headless", "--continue",
+    "--listen=:2345", "--api-version", "2", "./bin/main",
+  ]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", ".idea", ".git", ".output.txt"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
-  full_bin = ""
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   include_file = []
-  kill_delay = "0s"
+  kill_delay = "500ms"
   log = "build-errors.log"
   poll = false
   poll_interval = 0
@@ -27,7 +30,7 @@ tmp_dir = "bin"
   pre_cmd = []
   rerun = false
   rerun_delay = 500
-  send_interrupt = false
+  send_interrupt = true
   stop_on_error = false
 
 [color]
