chore(Dockerfile): clean up comments and improve base image specificity
- Removed unnecessary comments to simplify the Dockerfile.
- Switched from `alpine:latest` to a specific SHA for better build reproducibility.
- Updated `.gitignore` to exclude `token*` files.

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ client_secret*
 .env
 # Output of the go coverage tool
 *.out
-
+token*
 # Air temporary directory and build logs
 tmp/
 build-errors.log
