--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - v*
 
 jobs:
   build:
@@ -14,6 +16,8 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}
+          tags: |
+            type=ref,event=tag
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -31,3 +35,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Deploy
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          curl "$deploy_url"
